--- a/VegasGuide.html
+++ b/VegasGuide.html
@@ -2,31 +2,75 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elizabeth's Fabulous Guide to Las Vegas</title>
+    <title>The Poor Man's Guide to Fabulous Las Vegas</title>
     <link rel="stylesheet" href="vegasstyle.css">
   </head>
   <body>
-    <h1>Elizabeth's <em>Fabulous</em> Guide to <em>Las Vegas</em></h1>
-      <img src="images/las_vegas_night.jpg" height="300" width="420" alt="Photo of Las Vegas at Night">
-    <h2>What to Do</h2>
-      <h4>"I'm a High Roller"</h4>
-      <h4>"I'm Hoping to Walk Out With Some Comps"</h4>
-      <h4>"I Don't Really Like To Gamble"</h4>
-      <h4>"I'm Just Going to See the Shows"</h4>
-    <h2>Resort Reviews</h2>
-      <h3>Luxor</h3>
-        <img src="images/luxor.jpg" alt="Photo of Luxor" height="400" width="350">
-      <h3>The Mirage</h3>
-        <img src="images/the mirage.jpg" alt="Photo of The Mirage">
-    <h2>Food Guide</h2>
-      <h3>Eating After Losing Money</h3>
-      <h3>Eating After Winning Money</h3>
+    <header>
+      <img id="dollarsign_left" src="images/dollar sign.jpg" alt="dollar sign">
+      <p id="intro" class="text">
+      Are YOU drowning in debt?<br>
+      Did YOU gamble away your last dollar?<br>
+      Do YOU have caviar tastes on a tuna fish budget?
+      <br>
+      Look no further...
+      </p>
+      <img id="dollarsign_right" src="images/dollar sign.jpg" alt="dollar sign">
+    </header>
+    <div id=head>
+        <h1><em>The Poor Man's Guide</em></h1>
+        <img src="images/las vegas sign_cropped.jpg" alt="Photo of Las Vegas Sign">
+    </div>
     <hr>
-    <h2>Things to Do Outside Vegas</h2>
-      <ul>
-        <li>Civilization</li>
-        <li>Wilderness</li>
-        <li>Outer Space</li>
-          <img src="images/alien picture.jpg" alt="Photo of Alien">
+    <div id=summary>
+      <p>I married a Poorman. </p>
+      <br>
+      <figure>
+        <img src="https://i.redd.it/dmjc6m83k1e31.jpg" style="width:300px; height:auto" alt="Picture of bear sitting at a casino table">
+        <figcaption>"<em>Bear</em> with me, I'm new to this game."</figcaption>
+      </figure>
+    </div>
+    <main id="sections">
+      <h2><em>Entertainment</em></h2>
+        <div class="row">
+          <div class="column">
+            <img src="images/Bellagio_Fountains.jpg" alt="Image of Bellagio Fountains" style="width=100%">
+          </div>
+          <div class="column">
+            <img src="images/Mirage_Volcano.jpg" alt="Image of Mirage Volcano" style="width=100%">
+          </div>
+          <div class="column">
+            <img src="images/Luxor_Sphinx.jpg" alt="Image of Luxor Sphinx" style="width=100%">
+          </div>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <ul style="list-style-type:none; text-align: left">
+            <li><h4>Bellagio Fountains</h4></li>
+            <p>At the conclusion of the classic 2000 film <em>Ocean's Eleven</em>, the bask in the glory of the Bellagio Fountains. The Bellagio is considered one of the grandest Vegas resorts, so you're not likely gonna stay here any time soon if you're a poor man. Lucky for you, the Fountain show is free. </p>
+            <li><h4>Mirage Volcano</h4></li>
+            <p>Every fifteen minutes, drums and flames signal the eruption of the volcano that looms ominously in front of the resort.
+            <li><h4>Luxor Sphinx</h4></li>
+        </ul>
+      <h2><em>Food & Lodging</em></h2>
+      <div class="row">
+        <div class="column">
+          <img src="images/The_Wynn.jpg" alt="Image of The Wynn" style="width=100%">
+        </div>
+        <div class="column">
+          <img id="buffet" src="images/Buffet.jpg" alt="Image of Buffet" style="width=100%">
+        </div>
+        <div class="column">
+          <img src="images/slot_machines.jpg" alt="Image of Slot Machines" style="width=100%">
+        </div>
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <ul style="list-style-type:none; text-align: left">
+          <li><h4>Bellagio Fountains</h4></li>
+          <p>At the conclusion of the classic 2000 film <em>Ocean's Eleven</em>, the bask in the glory of the Bellagio Fountains. The Bellagio is considered one of the grandest Vegas resorts, so you're not likely gonna stay here any time soon if you're a poor man. Lucky for you, the Fountain show is free. </p>
+          <li><h4>Mirage Volcano</h4></li>
+          <p>Every fifteen minutes, drums and flames signal the eruption of the volcano that looms ominously in front of the resort.
+          <li><h4>Luxor Sphinx</h4></li>
+      </ul>
+    </main>
   </body>
 </html>
