--- a/VegasGuide.html
+++ b/VegasGuide.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img id="dollarsign_left" src="images/dollar sign.jpg" alt="dollar sign">
+      <img id="dollarsign_left" src="Images/dollar sign.jpg" alt="dollar sign">
       <p id="intro" class="text">
       Are YOU drowning in debt?<br>
       Did YOU gamble away your last dollar?<br>
@@ -15,15 +15,15 @@
       <br>
       Look no further...
       </p>
-      <img id="dollarsign_right" src="images/dollar sign.jpg" alt="dollar sign">
+      <img id="dollarsign_right" src="Images/dollar sign.jpg" alt="dollar sign">
     </header>
     <div id=head>
         <h1><em>The Poor Man's Guide</em></h1>
-        <img src="images/las vegas sign_cropped.jpg" alt="Photo of Las Vegas Sign">
+        <img src="Images/las vegas sign_cropped.jpg" alt="Photo of Las Vegas Sign">
     </div>
     <hr>
     <div id=summary>
-      <p>I married a Poorman. </p>
+      <p>Don't let anyone tell you you can't afford an awesome trip to Las Vegas -  because you can! (Trust me, I would know - my last name isn't "Poorman" for nothing.) Read this guide for some handy tips on having a fun n' cheap time in a city entirely designed to gobble up your hard-earned cash.</p>
       <br>
       <figure>
         <img src="https://i.redd.it/dmjc6m83k1e31.jpg" style="width:300px; height:auto" alt="Picture of bear sitting at a casino table">
@@ -31,45 +31,48 @@
       </figure>
     </div>
     <main id="sections">
-      <h2><em>Entertainment</em></h2>
+      <h2><em>Street Sights</em></h2>
         <div class="row">
           <div class="column">
-            <img src="images/Bellagio_Fountains.jpg" alt="Image of Bellagio Fountains" style="width=100%">
+            <img src="Images/Bellagio_Fountains.jpg" alt="Image of Bellagio Fountains" style="width=100%">
           </div>
           <div class="column">
-            <img src="images/Mirage_Volcano.jpg" alt="Image of Mirage Volcano" style="width=100%">
+            <img src="Images/Mirage_Volcano.jpg" alt="Image of Mirage Volcano" style="width=100%">
           </div>
           <div class="column">
-            <img src="images/Luxor_Sphinx.jpg" alt="Image of Luxor Sphinx" style="width=100%">
+            <img src="Images/Luxor_Sphinx.jpg" alt="Image of Luxor Sphinx" style="width=100%">
           </div>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Some people really do go to Vegas just to "see the shows." The city keeps in residence many of the world's greatest magicians, comedians, DJs, acrobats, and dancers. It's not uncommon for even the "cheap" tickets to these shows to run over a hundred bucks. That's why I've curated a list of absolutely, positively, 100% free shows that are well worth wading through throngs of drunk buffoons on the wide Strip sidewalks. I promise that the only thing you need to experience these attactions is your own two feet.</p>
         <ul style="list-style-type:none; text-align: left">
             <li><h4>Bellagio Fountains</h4></li>
-            <p>At the conclusion of the classic 2000 film <em>Ocean's Eleven</em>, the bask in the glory of the Bellagio Fountains. The Bellagio is considered one of the grandest Vegas resorts, so you're not likely gonna stay here any time soon if you're a poor man. Lucky for you, the Fountain show is free. </p>
+            <p>At the end of the classic 2000 film <em>Ocean's Eleven</em>, the heroes bask in the glory of their successful heist in front of the Fountains of Bellagio. An iconic scene to be sure, but nothing beats seeing it in person. Witness the choreography of the immense water jets, spiralling and spraying to a cacophony of music and light. The Bellagio is considered one of the grandest Vegas resorts, so if you're a poor man, you're not likely to be staying here any time soon. But lucky for you, the Fountains are free to watch. The show typically runs daily every 15-30 minutes until midnight.</p>
             <li><h4>Mirage Volcano</h4></li>
-            <p>Every fifteen minutes, drums and flames signal the eruption of the volcano that looms ominously in front of the resort.
+            <p>In the northern half of the Las Vegas Strip, a Polynesian oasis called The Mirage rises like a phoenix out of the dusty desert. This resort was built by Steve Wynn, Vegas's most ingenious and infamous casino developer - and he knew how to entertain the masses. Three times a night, flames and drums (a beat recorded by Grateful Dead drummer Mickey Hart) signal the eruption of an artificial volcano that looms ominously near the hotel entrance.</p>
             <li><h4>Luxor Sphinx</h4></li>
+            <p>Experience the beauty and wonders of a UNESCO World Heritage Site WITHOUT paying for a plane ticket OR a time machine! The Luxor resort is named for Luxor, Egypt, the ancient city of Thebes. While much of the original Egyptian theming in the Luxor's interior has been removed, its outside still boasts an imposing replica of the Great Sphinx and other antiquities. Stick around until nightfall to view the Luxor Sky Beam, which juts from the top of the hotel's pyramid. As the strongest beam of light in the world, the Sky Beam is visible from as far away as Los Angeles.
         </ul>
-      <h2><em>Food & Lodging</em></h2>
+      <h2><em>Eats & Sleeps</em></h2>
       <div class="row">
         <div class="column">
-          <img src="images/The_Wynn.jpg" alt="Image of The Wynn" style="width=100%">
+          <img src="Images/The_Wynn.jpg" alt="Image of The Wynn" style="width=100%">
         </div>
         <div class="column">
-          <img id="buffet" src="images/Buffet.jpg" alt="Image of Buffet" style="width=100%">
+          <img id="buffet" src="Images/Buffet.jpg" alt="Image of Buffet" style="width=100%">
         </div>
         <div class="column">
-          <img src="images/slot_machines.jpg" alt="Image of Slot Machines" style="width=100%">
+          <img src="Images/NYNY.jpg" alt="Image of New York New York resort" style="width=100%">
         </div>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>You got to see some cool stuff, but now you're hungry and tired. Time to hitchhike home, right? Wrong! Don't worry, you won't have to stay up all night or sleep on the roof of Caesars Palace. Learn how to score comp room nights, get the most calories out of a 2 for 1 buffet, and accumulate more free alcohol than you know what to do with.</p>
       <ul style="list-style-type:none; text-align: left">
-          <li><h4>Bellagio Fountains</h4></li>
-          <p>At the conclusion of the classic 2000 film <em>Ocean's Eleven</em>, the bask in the glory of the Bellagio Fountains. The Bellagio is considered one of the grandest Vegas resorts, so you're not likely gonna stay here any time soon if you're a poor man. Lucky for you, the Fountain show is free. </p>
-          <li><h4>Mirage Volcano</h4></li>
-          <p>Every fifteen minutes, drums and flames signal the eruption of the volcano that looms ominously in front of the resort.
-          <li><h4>Luxor Sphinx</h4></li>
+          <li><h4>Comp Rooms</h4></li>
+          <p>What if I told you, that by pushing a single button on your phone, you could stay for ZERO DOLLARS at one of the most posh resorts on the Strip? If you haven't downloaded the Wynn Slots or MyVEGAS mobile apps yet, you're already behind. Spin the free slot machines to accrue points towards hotel stays, discounted food and beverage, free attactions, and more. It really works.</p>
+          <li><h4>Food Deals</h4></li>
+          The slot machine apps frequently offer rewards in the form of food - usually at the venue Vegas is most known for - the buffet. If you get a free or BOGO buffet coupon, just use it to gorge on a whole days worth of calories and you won't want to spend more! Most casinos also offer free rewards cards that you can use while gambling. Even with our "poor" contribution to the casino's piggy bank on our last trip, we were able to accrue about $20 in free Starbucks at the hotel store.
+          <p></p>
+          <li><h4>Complimentary Cocktails</h4></li>
+          <p> Sit at any slot machine on the Strip and put a bill in. Stretch out that bill by hitting the spin button VERY SLOWLY. As if like magic, a cocktail waitdress will appear to take your free drink order. Casinos came up with this idea to keep people gambling, but you'll still get served even if you are betting one penny at a time. Just don't be more of a cheapskate than you already are and make sure you have enough cash to pay a $1-2 tip.
       </ul>
     </main>
   </body>
